--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "modul9webpack-repeta",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development",
+    "start": "webpack --mode=development",
+    "dev": "npx webpack serve --mode=development",
     "prod": "webpack --mode=production"
   },
   "repository": {
@@ -19,8 +20,20 @@
   },
   "homepage": "https://github.com/VasylBarna/modul9webpack#readme",
   "devDependencies": {
-    "webpack": "^5.35.1",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.4",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.5.0",
+    "sass": "^1.32.11",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
   }
 }
